<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.chocolatecake.viewmodel.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/edittext_search"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:layout_marginTop="48dp"
            android:background="@drawable/edittext_background"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="@dimen/spacing_custom"
            android:drawableTint="@color/on_background_60"
            android:imeOptions="flagNoFullscreen"
            android:inputType="text"
            android:paddingStart="@dimen/spacing_custom"
            android:paddingEnd="48dp"
            android:text="@={viewModel.query}"
            android:textColor="@color/on_background_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_medium"
            android:indeterminate="true"
            app:indeterminateAnimationType="disjoint"
            app:indicatorColor="@color/primary"
            app:layout_constraintEnd_toEndOf="@+id/edittext_search"
            app:layout_constraintStart_toStartOf="@id/edittext_search"
            app:layout_constraintTop_toBottomOf="@id/edittext_search"
            app:loading="@{viewModel.state.loading}" />

        <ImageButton
            android:id="@+id/image_button_filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing_custom"
            android:background="@null"
            android:onClick="@{() -> viewModel.onClickFilter()}"
            android:src="@drawable/ic_filter"
            app:layout_constraintBottom_toBottomOf="@+id/edittext_search"
            app:layout_constraintEnd_toEndOf="@+id/edittext_search"
            app:layout_constraintTop_toTopOf="@+id/edittext_search"
            app:tint="@color/on_background_60" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_medium"
            android:clipToPadding="false"
            android:paddingStart="@dimen/spacing_medium"
            android:paddingEnd="@dimen/spacing_small"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/edittext_search"
            app:layout_constraintTop_toBottomOf="@id/edittext_search">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipMovie"
                    style="@style/TextStyle.LabelMedium.ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/movie" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTV"
                    style="@style/TextStyle.LabelMedium.ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipPerson"
                    style="@style/TextStyle.LabelMedium.ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/person" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCollection"
                    style="@style/TextStyle.LabelMedium.ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/collection" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCompany"
                    style="@style/TextStyle.LabelMedium.ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/company" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_search"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:clipToPadding="false"
            app:hideResult="@{viewModel.state.error}"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:query="@{viewModel.query}"
            app:spanCount="2"
            tools:listitem="@layout/search_item_movie" />

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/lottie_animation_view_empty"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/empty_state"
            app:showWhenNoResult="@{viewModel.state.searchMovieResultEntity}"
            app:showWhenQueryEmpty="@{viewModel.query}" />

        <include
            android:id="@+id/lottie_animation_view_no_network"
            layout="@layout/layout_no_connection"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"
            app:showWhenError="@{viewModel.state.error}" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>